# nuviora-beckend

./: .coverage  .env.example  .env_old  .gitignore  Dockerfile  FastAPI_Django.txt  LICENSE  README.md  ReadMe.alsol  db_setup.py  docker-compose.yml  env_old.txt  fly.toml  main.py  pyproject.toml  readme.txt  render.yaml  requirements.txt  test.db  test_black_file.py
.github/workflows/: black-formatter.yml  ci.yml  deploy-to-prod.yml  deploy-to-prod.yml_0  deploy-to-prod.yml_test  deploy.yml  run_test.yml
docker/: Dockerfile
docs/: API_DOCS.md  Diagram01.drawio  README.md
docs/source/: conf.py  index.rst
front-end/: env.py  index.html  script.js
migrations/versions/: c347b1697f7d_comments.py  eedf06703e7d_catgramminit.py
nginx/: default.conf  nginx.conf
scr/: schemas.py
scr/conf/: config.py  messages.py
scr/database/: db.py  db2.py  models.py
scr/repository/: comments.py  notes.py  tags.py  users.py
scr/routes/: auth.py  cloud.py  comments.py  notes.py  posts.py  tags.py  users.py
scr/services/: auth.py  cloudsrv.py  core.py  email.py  posts.py  roles.py  tags.py
scr/templates/: example_email.html
src/: Dockerfile  alembic.ini  config.py  database.py  main.py  requirements.txt
src/admin/: routes.py
src/api/: routers.py
src/core/: security.py
src/models/: location_model.py  product_model.py  (+1 more)
tests/: conftest.py  test_address_repo.py  test_main.py  test_route_auth.py  test_route_notes.py  test_route_tags.py  test_route_users.py  test_unit_repository_notes.py  test_unit_repository_tags.py  test_unit_repository_users.py  test_user_repo.py
(+26 files in other folders)
